<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Еды Вагон</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="title_activity_cart">Корзина</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_contacts">Контакты</string>

    <!-- Dialog -->
    <string name="choose">Выбрать</string>
    <string name="cancel">Отмена</string>
    <string name="ok">OK</string>

    <!-- Menu -->
    <string name="search">Поиск</string>
    <string name="search_hint">Название или ингридиент</string>
    <string name="cart">Корзина</string>
    <string name="clearCart">Очистить корзину</string>

    <!-- Main Fragment -->
    <string name="add_to_cart">В корзину</string>
    <string name="back">Назад</string>

    <!-- Cart -->
    <string name="total">Итого:</string>
    <string name="cart_order_process">Оформить</string>
    <string name="card_order_finish">Заказать</string>

    <!-- Order Form -->
    <string name="order_name">Имя</string>
    <string name="customer_phone">Контактный телефон</string>
    <string name="customer_surname">Фамилия</string>
    <string name="customer_street">Улица</string>
    <string name="customer_home_number">Дом</string>
    <string name="customer_flat_number">Квартира</string>
    <string name="customer_intercom">Домофон</string>
    <string name="persons_count">Количество персон</string>
    <string name="has_birthday">Именинник</string>
    <string name="promo_card_number">Номер карты</string>

    <!-- Other -->
    <string name="no_internet_connection">Требуется подключение к интернету</string>
    <string name="discount_reason">Заказ с помощью мобильного приложения</string>
    <string name="connection_error">Ошибка при подключении к серверу</string>

    <!-- Placeholder Text -->
    <string name="company_address">ул.Белинского, 38</string>
    <string name="company_phone_number">23&#8211;08&#8211;666</string>
    <string name="company_email">foodwagonofficial@gmail.com</string>
    <string name="company_url">http://nn.foodwagon.ru</string>
    <string name="gramms">г.</string>
</resources>
